Java 2022 day 03